   * The South Guard:
     * Fixed double "lich found" event in Choice in the Fog
 * Language and i18n:
   * Updated translations: Galician, Japanese, Russian, Scottish Gaelic
 * Lua API:
   * Added: function wesnoth.find_cost_map().
 * Units:
   * Added description for the Wose race.
 * User interface:
   * Unit ellipses are now automatically updated if a unit gains or loses its ZoC
 * Miscellaneous and bug fixes
   * Creating a unit via debug mode now clears fog/shroud around the unit.
   * [move_unit_fake] now accepts an optional force_scroll= attribute (def. to
     'yes') that allows scrolling the viewport even when [lock_view] is in
     effect or Follow Unit Actions is disabled in Advanced Preferences.
   * [move_unit] accepts an optional force_scroll= attribute like
     [move_unit_fake] above, defaults to using the [move_unit_fake] default.
   * Added: Feature in pathfind.xpp to build a cost map.

Version 1.11.5:
 * Add-ons client:
   * Do not bump the download count for add-ons that are currently installed
     and are being reinstalled or upgraded
 * Add-ons server:
   * Restricted names (not titles) for newly uploaded add-ons to ASCII hyphens,
     underlines, and alphanumerical characters. Previously uploaded add-ons
     are exempt from this change.
 * AI:
   * New macro EXPERIMENTAL_AI for using Experimental AI in both SP scenarios and MP maps
   * Recruiting in Micro and Experimental AIs: allow more terrain codes for castles/keeps 
   * Improved/Added: Command 'lua wesnoth.debug_ai([side]).ai' will now give access to the
     ai-table of [side].
   * Improved AI behavior when using goto_x / goto_y in WML
   * Micro AIs:
     * Zone Guardian: Add optional station_x,station_y= keys
     * Goto: don't exclude leader by default
     * Bug fixes in Return Guardian, Healer Support and Goto MAIs
   * Experimental AI: fix bugs that disabled recruiting for some UMC weapon specials
 * Campaigns:
   * All:
     * replaced deprecated aspects with [goal] aspect