@@ -27,6 +27,10 @@ Version 1.11.5+dev:
    * Added description for the Wose race.
  * User interface:
    * Unit ellipses are now automatically updated if a unit gains or loses its ZoC
+ * WML engine:
+   * If [recall] cannot find a unit to recall, the message is logged at the
+     "info" severity level in the "wml" domain (instead of the "error" level in
+     the "engine" domain). This means the message will be suppressed by default.
  * Miscellaneous and bug fixes
    * Creating a unit via debug mode now clears fog/shroud around the unit.
    * [move_unit_fake] now accepts an optional force_scroll= attribute (def. to
